--- a/Simple CloudKit App/Source/Simple CloudKit Messenger Sample.entitlements
+++ b/Simple CloudKit App/Source/Simple CloudKit Messenger Sample.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.milestonemade.Simple-CloudKit-Messenger</string>
+		<string>iCloud.$(CFBundleIdentifier)</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
